# Box3D-wasm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
docs/: collision.md  demo-parity-inventory.md  demo-parity-plan.md  porting_plan.md  simulation.md  wasm.md
include/box3d/: base.h  types.h
samples/: main.cpp  sample.cpp  sample_bodies.cpp  sample_stacking.cpp
samples/gfx/: debug_adapter.c
scripts/: build-wasm.mjs
src/: recording.c  recording.h  recording_replay.c  shape.c  shape.h
test/: CMakeLists.txt  main.c  test_recording.c
wasm/: CMakeLists.txt  GenerateExports.cmake  benchmark_helpers_bridge.c  box3d.js  demo.html  hello_world.c
web/: app.js  box3d-loader.js  index.html  styles.css
web/samples/: benchmark.js  bodies.js  character.js  collision.js  compound.js  continuous.js  determinism.js  events.js  geometry.js  helpers.js  human.js  joints.js  manifold.js  mesh.js  ragdoll.js  robustness.js  shapes.js  stacking.js  world.js
